--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,1 @@
-$ENV:DB_PASSWORD = ""
-
-$ENV:DB_USER = ""
-
-$ENV:DB_PORT = ""
-
-$ENV:DB_NAME = ""
-
-$ENV:DB_HOST = ""
+$env:DATABASE_URL = "host= port= user= password= dbname= sslmode=disable"
