--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-$env:DATABASE_URL = "host= port= user= password= dbname= sslmode=disable"
+$env:DATABASE_URL = "postgres://user:password@host:port/dbname?sslmode=disable"
