--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-$env:DATABASE_URL = "postgres://user:password@host:port/dbname?sslmode=disable"
+# Database url for connect to database
+DATABASE_URL=postgres://user:password@host:port/dbname?sslmode=disable
