--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-# Database url for connect to database
-DATABASE_URL=postgres://user:password@host:port/dbname?sslmode=disable
+# Database url
+DATABASE_URL="postgres://user:password@host:port/dbname?sslmode=disable"
